--- a/bag-of-words/tfidf-knn.ipynb
+++ b/bag-of-words/tfidf-knn.ipynb
@@ -50,7 +50,7 @@
     "  '''Returns a list of the text labels per article.'''\n",
     "  with open(filename, 'r') as f:\n",
     "    labels = [x.strip() for x in f.readlines()]\n",
-    "  return labels\n",
+    "  return labels\n"
    ]
   },
   {
