--- a/bag-of-words/tfidf-knn.ipynb
+++ b/bag-of-words/tfidf-knn.ipynb
@@ -50,15 +50,7 @@
     "  '''Returns a list of the text labels per article.'''\n",
     "  with open(filename, 'r') as f:\n",
     "    labels = [x.strip() for x in f.readlines()]\n",
-    "  return labels\n",
-    "\n",
-    "def lemmatize(text):\n",
-    "  '''Returns lemmatized text. Could be sped up using spacy pipelines.'''\n",
-    "  doc = nlp(text)\n",
-    "  words = []\n",
-    "  for sent in doc.sents:\n",
-    "    words.extend([t.lemma_ for t in sent])\n",
-    "  return ' '.join(words)"
+    "  return labels"
    ]
   },
   {
