--- a/data/compile-data.ipynb
+++ b/data/compile-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -30,7 +30,7 @@
     "      files.extend([os.path.join(dirpath, x) for x in filenames])\n",
     "  return files\n",
     "\n",
-    "def file_iterator():\n",
+    "def file_generator():\n",
     "  files = get_file_list()\n",
     "  for filename in files:\n",
     "    with open(filename, 'r') as f:\n",
@@ -44,22 +44,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "out_text = 'articles.txt'\n",
-    "out_label = 'labels.txt'\n",
-    "out_url = 'urls.txt'\n",
+    "out_text = 'politics-articles.txt'\n",
+    "out_label = 'politics-labels.txt'\n",
+    "out_url = 'politics-urls.txt'\n",
     "\n",
     "for filename in [out_text, out_label, out_url]:\n",
     "  if os.path.exists(filename):\n",
     "    os.remove(filename)\n",
     "\n",
-    "for data in file_iterator():\n",
+    "for data in file_generator():\n",
     "  if data['label'] == 'satirical':\n",
+    "    continue\n",
+    "  if len(data['taxonomy']) == 0:\n",
+    "    continue\n",
+    "  labels = [data['taxonomy'][i]['label'] for i in range(len(data['taxonomy']))]\n",
+    "  labels = [x for x in labels if re.match('.*politics', x)]\n",
+    "  if len(labels) == 0:\n",
     "    continue\n",
     "  with open(out_text, 'a') as g:\n",
     "    g.write('{}\\n'.format(clean_string(data['text'])))\n",
